--- a/nodebird/views/layout.html
+++ b/nodebird/views/layout.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <div class="container">
+      <a href='/'><h1>NodeBird</h1></a>
       <div class="profile-wrap">
         <div class="profile">
           {% if user and user.id %}
